Fix dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 [data-theme="dark"] {
     --n-0: #1C1B1B;
-    --n-100: #1F1F1F;
+    --n-100: #2b2b2b;
     --n-600: #444242;
     --n-900: #C3C3C3;
     --n-1000: #F3F3F3;
@@ -150,7 +150,7 @@ nav {
     justify-content: space-between;
     padding: 12px 80px;
     color: #fafafa;
-    background-color: #1f1f1f;
+    background-color: #2b2b2b;
     position: sticky;
     top: 100px;
 }
@@ -605,7 +605,6 @@ section {
     border-radius: 12px;
     transform: translateY(0);
     transition: 0.7s;
-    background-color: var(--n-100);
     border: none;
     max-width: 480px;
 }
@@ -616,6 +615,7 @@ section {
 
 .project-card:hover {
     transform: translateY(-2%);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     transition: 0.7s;
 }
 
@@ -664,6 +664,7 @@ section {
 
 .card-btn:hover {
     transform: translateY(-8%);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     transition: 0.5s;
 }
 
